style: fix spacing and margins in mobiles

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,7 @@ html {
 }
 
 h1 {
-  @apply font-serif  text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl;
+  @apply font-serif  text-3xl lg:text-5xl xl:text-6xl 2xl:text-7xl;
 }
 
 h2 {
